2022-06-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Rename some groff Autoconf macros to better match
	Autoconf's own naming conventions.

	* m4/groff.m4 (GROFF_MAKEINFO): Rename to...
	(GROFF_PROG_MAKEINFO): ...this.
	(GROFF_TEXI2DVI): Rename to...
	(GROFF_PROG_TEXI2DVI): ...this.

	* configure.ac:
	* m4/groff.m4 (GROFF_TEXI2DVI): Update call sites.

2022-06-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac (SH, SS, B, I, SM, SB): Set input trap with `it`
	instead of `itc` for better Unix Version 7 man(7) compatibility.

	Fixes <https://savannah.gnu.org/bugs/?51468>.  Also see
	discussion at
	https://lists.gnu.org/archive/html/groff/2022-06/msg00020.html
	et sequentia (amid a vigorous bikeshedding of `\&`'s name).

2022-06-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Regression-test use of input traps.

	* tmac/tests/an_use-input-traps-correctly.sh: Do it.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-06-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (LoadDesc): Validate device
	description file for essential directives and acceptable values
	as grops(1) does.

2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff, grohtml, grops, grotty]: Update wording of diagnostic
	messages to refer to "motion quantum" rather than "resolution"
	where appropriate.

	* src/devices/grohtml/post-html.cpp
	(html_printer::html_printer):
	* src/devices/grops/ps.cpp (ps_printer::ps_printer):
	* src/devices/grotty/tty.cpp (tty_printer::set_char,
	tty_printer::add_char, tty_printer::end_page):
	* src/roff/troff/env.cpp (line_length, title_length): Do it.

2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Do more "DESC" file validation.
	(LoadDesc): Bomb out gracefully if any of "unitwidth", "res", or
	"sizescale" missing from "DESC" file.  This prevents Perl
	warnings about use of unintialized values, and undoubtedly