@@ -1,3 +1,14 @@
+2022-06-09  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* m4/groff.m4 (GROFF_PROG_MAKEINFO, GROFF_PROG_TEXI2DVI):
+	Largely revert commit d5013ededc, 21 May: run checks for
+	'makeinfo' and 'texi2dvi' programs regardless of presence of
+	".tarball-version" file.  Their presence is a necessary (but not
+	sufficient) condition for refresh of formatted forms of our
+	Texinfo manual if the source is modified.
+
+	Begins addressing <https://savannah.gnu.org/bugs/?62592>.
+
 2022-06-08  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	[build]: Rename some groff Autoconf macros to better match
